Fix Bug #18341. @- Fixed cases where preg_split() incorrectly terminated final element if @  it contained null byte. (Andrei)